# satcheldb

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  main.cpp
src/: main.cpp  memoryTable.cpp  memoryTable.h  parsing.cpp  parsing.h  row.cpp  row.h  schema.cpp  schema.h  table.cpp  table.h  value.h
src/simdjson/: simdjson.cpp
tests/: memoryTable.test.cpp  parsing.test.cpp  row.test.cpp  schema.test.cpp  test.cpp  utils.cpp  utils.h
